--- a/css/style-nosotros.css
+++ b/css/style-nosotros.css
@@ -50,7 +50,7 @@ body.light-mode .card {
 }
 
 body.light-mode .card a {
-  color: #0d6efd;
+  color: #3b4753;
 }
 
 body.light-mode .card a:hover {
